--- a/templates/config.tmpl
+++ b/templates/config.tmpl
@@ -1,3 +1,6 @@
+; -*- mode: clojure; -*-
+; vim: filetype=clojure
+
 (ns core.alert.config
   "Alert definition."
   (:require [riemann.common :refer [event-to-json]]
